force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystemDetail__c/PBS_gBUILD_PBuildingScopeSystemDetail__c.object-meta.xml
<CustomObject>
    <description>gBUILD PBuilding Scope Details: Detailed information for each scope system</description>
    <label>gBUILD Scope System Detail</label>
    <nameField>
        <displayFormat>gbSsd-{00000}</displayFormat>
        <label>PBSgBUILDSSD</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>gBUILD Scope System Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>