force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystemDetail__c/fields/AbsorptionChiller__c.field-meta.xml
<CustomField>
    <fullName>AbsorptionChiller__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Absorption Chiller</description>
    <inlineHelpText>Select the checkbox if chiller is an absorption chiller. Absorption chillers use high-temperature heat, not electricity, as their main energy source.</inlineHelpText>
    <label>Absorption Chiller</label>
    <type>Checkbox</type>
</CustomField>