force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystemDetail__c/fields/AffectedSpace__c.field-meta.xml
<CustomField>
    <fullName>AffectedSpace__c</fullName>
    <description>Dropdown for space affected by system</description>
    <inlineHelpText>Please select the applicable space type included in new lighting application.</inlineHelpText>
    <label>Affected Space</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Courtroom</fullName>
            </value>
            <value>
                <fullName>Lobby</fullName>
            </value>
            <value>
                <fullName>Office</fullName>
            </value>
            <value>
                <fullName>StairwellHallway</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>