force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystemDetail__c/fields/AffectedSpaceOtherText__c.field-meta.xml
<CustomField>
    <fullName>AffectedSpaceOtherText__c</fullName>
    <description>If &quot;other&quot; selected in dropdown, additional text</description>
    <inlineHelpText>If &quot;other&quot; is selected above, please provide additional affected space type.</inlineHelpText>
    <label>Other Affected Space</label>
    <length>255</length>
    <type>Text</type>
</CustomField>