force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystemDetail__c/fields/AffectedSpaceOutdoor__c.field-meta.xml
<CustomField>
    <fullName>AffectedSpaceOutdoor__c</fullName>
    <description>Dropdown for space affected by system</description>
    <inlineHelpText>Please select the applicable space type included in outdoor lighting application.</inlineHelpText>
    <label>Affected Space Outdoor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Outdoor Parking Lot</fullName>
            </value>
            <value>
                <fullName>Site Lighting</fullName>
            </value>
            <value>
                <fullName>Outdoor Parking Structure</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>