force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystemDetail__c/fields/AnnualEnergyProductionEfficiency__c.field-meta.xml
<CustomField>
    <fullName>AnnualEnergyProductionEfficiency__c</fullName>
    <description>Annual Production Or Efficiency Estimates</description>
    <inlineHelpText>Please provide the expected annual energy production for your system. If solar thermal or geothermal provide in BTU/yr; if PV provide in kWh/Yr.</inlineHelpText>
    <label>Anticipated Annual Production (BTU/yr)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>