force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystemDetail__c/fields/AnticipatedLightingPowerDensity__c.field-meta.xml
<CustomField>
    <fullName>AnticipatedLightingPowerDensity__c</fullName>
    <description>Anticipated lighting power density of system</description>
    <inlineHelpText>Please provide the estimated or implemented lighting power density (in watts per square foot)for all square footage within the affected space type.</inlineHelpText>
    <label>Anticipated Power Density (Watts/Sq Ft)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>