force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystemDetail__c/fields/BoilerCapacity__c.field-meta.xml
<CustomField>
    <fullName>BoilerCapacity__c</fullName>
    <description>Please provide the system size/capacity for this boiler:</description>
    <inlineHelpText>Please provide the system size/capacity for this boiler in mmBTUs.</inlineHelpText>
    <label>Boiler Capacity (MMBtu)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>