force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystemDetail__c/fields/BoilerExhaustStackRecovery__c.field-meta.xml
<CustomField>
    <fullName>BoilerExhaustStackRecovery__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Boiler Exhaust Stack Recovery</description>
    <inlineHelpText>Select the checkbox if boiler exhaust stack recovery is included in project building scope.</inlineHelpText>
    <label>Boiler Exhaust Stack Recovery</label>
    <type>Checkbox</type>
</CustomField>