force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystemDetail__c/fields/CarbonDioxideSpaceSensors__c.field-meta.xml
<CustomField>
    <fullName>CarbonDioxideSpaceSensors__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Carbon Dioxide Space Sensors</description>
    <inlineHelpText>Select the checkbox if carbon dioxide space sensors are included in project building scope.</inlineHelpText>
    <label>Carbon Dioxide Space Sensors</label>
    <type>Checkbox</type>
</CustomField>