force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystemDetail__c/fields/CeilingMountedPendantoutUplight__c.field-meta.xml
<CustomField>
    <fullName>CeilingMountedPendantoutUplight__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Ceiling Mounted Pendant without Uplight</description>
    <inlineHelpText>Select checkbox if installation of ceiling mounted pendant without uplight fixtures is included in project building scope.</inlineHelpText>
    <label>Ceiling Mounted Pendant without Uplight</label>
    <type>Checkbox</type>
</CustomField>