force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystemDetail__c/fields/CeilingMountedPendantUplight__c.field-meta.xml
<CustomField>
    <fullName>CeilingMountedPendantUplight__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Ceiling Mounted Pendant with Uplight</description>
    <inlineHelpText>Select checkbox if installation of ceiling mounted pendant with uplight fixtures is included in project building scope.</inlineHelpText>
    <label>Ceiling Mounted Pendant with Uplight</label>
    <type>Checkbox</type>
</CustomField>