force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystemDetail__c/fields/ChillerCapacity__c.field-meta.xml
<CustomField>
    <fullName>ChillerCapacity__c</fullName>
    <description>Chiller capacity</description>
    <inlineHelpText>Enter the total tonnage of the chiller.</inlineHelpText>
    <label>Chiller Capacity (tonnage)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>