force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystemDetail__c/fields/ChillerInstType__c.field-meta.xml
<CustomField>
    <fullName>ChillerInstType__c</fullName>
    <description>Please select one of the following roofing features or types that are included in this chiller installation:</description>
    <inlineHelpText>Please select one of the following roofing features or types that are included in this chiller installation:</inlineHelpText>
    <label>Chiller Installation Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>InstallationForNewBuilding</fullName>
            </value>
            <value>
                <fullName>ChillerReplInKindWithSimilarTonnage</fullName>
            </value>
            <value>
                <fullName>ReplacementWithDifferentTonnage</fullName>
            </value>
            <value>
                <fullName>ChillerSupplementalChiller</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>