force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystemDetail__c/fields/ChillerType__c.field-meta.xml
<CustomField>
    <fullName>ChillerType__c</fullName>
    <description>Chiller system type</description>
    <inlineHelpText>Select the chiller type.</inlineHelpText>
    <label>Chiller Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Absorption chiller (e.g. harvesting waste heat from other equipment)</fullName>
            </value>
            <value>
                <fullName>Centrifugal</fullName>
            </value>
            <value>
                <fullName>Reciprications</fullName>
            </value>
            <value>
                <fullName>ScrewDriven</fullName>
            </value>
            <value>
                <fullName>Scrolls</fullName>
            </value>
            <value>
                <fullName>Variable-speed screw chiller</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>