force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystemDetail__c/fields/Cogeneration__c.field-meta.xml
<CustomField>
    <fullName>Cogeneration__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Cogeneration</description>
    <inlineHelpText>Select the checkbox if cogeneration (use of a heat engine or a power station to simultaneously generate electricity and useful heat) is included in project building scope.</inlineHelpText>
    <label>Cogeneration</label>
    <type>Checkbox</type>
</CustomField>