force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystemDetail__c/fields/CompactFluorescent__c.field-meta.xml
<CustomField>
    <fullName>CompactFluorescent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Compact Fluorescent</description>
    <inlineHelpText>Select checkbox if installation of compact florescent light sources is included in project building scope.</inlineHelpText>
    <label>Compact Fluorescent</label>
    <type>Checkbox</type>
</CustomField>