force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystemDetail__c/fields/CondensingType__c.field-meta.xml
<CustomField>
    <fullName>CondensingType__c</fullName>
    <description>Please indicate if the new system is condensing or non-condensing:</description>
    <inlineHelpText>Please indicate if the new boiler(s) are condensing or non-condensing.</inlineHelpText>
    <label>Boiler Type (Condensing/Non-Condensing)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Condensing</fullName>
            </value>
            <value>
                <fullName>NonCondensing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>