force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystemDetail__c/fields/ConstantVolume__c.field-meta.xml
<CustomField>
    <fullName>ConstantVolume__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Constant Volume</description>
    <inlineHelpText>Select the checkbox if constant volume process is utilized in the chiller.</inlineHelpText>
    <label>Constant Volume</label>
    <type>Checkbox</type>
</CustomField>