force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystemDetail__c/fields/CoolingSysCriteria__c.field-meta.xml
<CustomField>
    <fullName>CoolingSysCriteria__c</fullName>
    <description>Cooling system criteria drop down</description>
    <inlineHelpText>Please select the appropriate cooling system criteria.</inlineHelpText>
    <label>Cooling System Criteria</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AirCooled</fullName>
            </value>
            <value>
                <fullName>RemoteAirSplitSystem</fullName>
            </value>
            <value>
                <fullName>WaterCooled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>