force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystemDetail__c/fields/Coolrooftype__c.field-meta.xml
<CustomField>
    <fullName>Coolrooftype__c</fullName>
    <description>If New Cool/Reflective Roof, please provide type of cool roof installed:</description>
    <inlineHelpText>If New Cool/Reflective Roof, please provide type of cool roof installed.</inlineHelpText>
    <label>Cool Roof Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Epdm</fullName>
            </value>
            <value>
                <fullName>Pvc</fullName>
            </value>
            <value>
                <fullName>Tpo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>