force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystemDetail__c/fields/DedicatedOutdoorAirSys__c.field-meta.xml
<CustomField>
    <fullName>DedicatedOutdoorAirSys__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Dedicated Outdoor Air System</description>
    <inlineHelpText>Select the checkbox if a Dedicated Outdoor Air System (DOAS) is included in project building scope. A DOAS is an HVAC system that consists of a dedicated outdoor system to handle latent loads and a parallel system to handle sensible loads.</inlineHelpText>
    <label>Dedicated Outdoor Air System (DOAS)</label>
    <type>Checkbox</type>
</CustomField>