force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystemDetail__c/fields/DemandCntrlVentlForAhu__c.field-meta.xml
<CustomField>
    <fullName>DemandCntrlVentlForAhu__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Demand Control Ventilation for AHU</description>
    <inlineHelpText>Select checkbox if demand control ventilation is included in project building scope. A demand controlled ventilation strategy adjusts the quantity of outdoor ventilation air supplied to a zone.</inlineHelpText>
    <label>Demand Control Ventilation</label>
    <type>Checkbox</type>
</CustomField>