force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystemDetail__c/fields/Downlights__c.field-meta.xml
<CustomField>
    <fullName>Downlights__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Downlights</description>
    <inlineHelpText>Select checkbox if downlighting is included in project building scope.</inlineHelpText>
    <label>Downlights</label>
    <type>Checkbox</type>
</CustomField>