force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystemDetail__c/fields/DuelFuel__c.field-meta.xml
<CustomField>
    <fullName>DuelFuel__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Duel Fuel</description>
    <inlineHelpText>Please select if boiler is Dual Fuel.</inlineHelpText>
    <label>Dual Fuel</label>
    <type>Checkbox</type>
</CustomField>