force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystemDetail__c/fields/ElecMeters__c.field-meta.xml
<CustomField>
    <fullName>ElecMeters__c</fullName>
    <description>Please indicate if the new system is a steam or a water boiler:</description>
    <inlineHelpText>Please indicate if the new system is a steam or a water boiler:</inlineHelpText>
    <label>Electricity Meter Installed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Steam</fullName>
            </value>
            <value>
                <fullName>WaterCooled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>