force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystemDetail__c/fields/FiberOpticLightingTechnologies__c.field-meta.xml
<CustomField>
    <fullName>FiberOpticLightingTechnologies__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Fiber Optic Lighting Technologies</description>
    <inlineHelpText>Select checkbox if installation of fiber optic lighting technologies are included in project building scope.</inlineHelpText>
    <label>Fiber Optic Lighting Technologies</label>
    <type>Checkbox</type>
</CustomField>