force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystemDetail__c/fields/Fluorescent__c.field-meta.xml
<CustomField>
    <fullName>Fluorescent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Fluorescent</description>
    <inlineHelpText>Please indicate what light sources are part of lighting application for this space.</inlineHelpText>
    <label>Fluorescent Lamps</label>
    <type>Checkbox</type>
</CustomField>