force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystemDetail__c/fields/GeothermalInstType__c.field-meta.xml
<CustomField>
    <fullName>GeothermalInstType__c</fullName>
    <description>Please select one of the following roofing features or types that are included in this geothermal installation:</description>
    <inlineHelpText>Please select one of the following roofing features or types that are included in this geothermal installation:</inlineHelpText>
    <label>Geothermal Installation Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CoolingDominant</fullName>
            </value>
            <value>
                <fullName>HeatingDominant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>