force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystemDetail__c/fields/GridLayIn__c.field-meta.xml
<CustomField>
    <fullName>GridLayIn__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Grid Lay In</description>
    <inlineHelpText>Select the checkbox if grid lay in of light is included project building scope.</inlineHelpText>
    <label>Grid Lay In</label>
    <type>Checkbox</type>
</CustomField>