force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystemDetail__c/fields/HeatExchangerBoilerLoopBldgLoop__c.field-meta.xml
<CustomField>
    <fullName>HeatExchangerBoilerLoopBldgLoop__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Heat Exchanger Between Boiler Loop and Building Loop</description>
    <inlineHelpText>Select the checkbox if a heat exchanger between boiler loop and building loop is included in project building scope.</inlineHelpText>
    <label>Heat Exchanger: Building &amp; Boiler Loop</label>
    <type>Checkbox</type>
</CustomField>