force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystemDetail__c/fields/HeatRecovery__c.field-meta.xml
<CustomField>
    <fullName>HeatRecovery__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Heat Recovery</description>
    <inlineHelpText>Select the checkbox if heat recovery is included in project building scope.</inlineHelpText>
    <label>Heat Recovery</label>
    <type>Checkbox</type>
</CustomField>