force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystemDetail__c/fields/Hid__c.field-meta.xml
<CustomField>
    <fullName>Hid__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if HID</description>
    <inlineHelpText>Select checkbox if HID light sources are being installed.</inlineHelpText>
    <label>HID Lamps</label>
    <type>Checkbox</type>
</CustomField>