force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystemDetail__c/fields/IncludesTerminalUnitRplcs__c.field-meta.xml
<CustomField>
    <fullName>IncludesTerminalUnitRplcs__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Includes terminal unit replacements</description>
    <inlineHelpText>Select the checkbox if terminal unit replacements are included in project building scope.</inlineHelpText>
    <label>Terminal Unit Replacement</label>
    <type>Checkbox</type>
</CustomField>