force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystemDetail__c/fields/Induction__c.field-meta.xml
<CustomField>
    <fullName>Induction__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Induction</description>
    <inlineHelpText>Please indicate what light sources are part of lighting application for this space.</inlineHelpText>
    <label>Induction Lamps</label>
    <type>Checkbox</type>
</CustomField>