force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystemDetail__c/fields/InstType__c.field-meta.xml
<CustomField>
    <fullName>InstType__c</fullName>
    <description>PV Installation Type dropdown</description>
    <inlineHelpText>PV Installation Type dropdown</inlineHelpText>
    <label>Installation Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ChillerInstallationForNewBuilding</fullName>
            </value>
            <value>
                <fullName>ChillerReplInKindWithSimilarTonnage</fullName>
            </value>
            <value>
                <fullName>ChillerReplacementWithDifferentTonnage</fullName>
            </value>
            <value>
                <fullName>ChillerSupplementalChiller</fullName>
            </value>
            <value>
                <fullName>GeothermalCoolingDominant</fullName>
            </value>
            <value>
                <fullName>GeothermalHeatingDominant</fullName>
            </value>
            <value>
                <fullName>PvBuildingIntegrated</fullName>
            </value>
            <value>
                <fullName>PvGroundMounted</fullName>
            </value>
            <value>
                <fullName>PvRoofMounted</fullName>
            </value>
            <value>
                <fullName>RoofNewCoolReflectiveRoof</fullName>
            </value>
            <value>
                <fullName>RoofVegetative</fullName>
            </value>
            <value>
                <fullName>RoofVegetative,NewCoolReflectiveRoof</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>