force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystemDetail__c/fields/Label__c.field-meta.xml
<CustomField>
    <fullName>Label__c</fullName>
    <description>An label unique to the project building for this scope detail.</description>
    <inlineHelpText>An label unique to the project building for this scope detail.</inlineHelpText>
    <label>Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>