force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystemDetail__c/fields/LabelNum__c.field-meta.xml
<CustomField>
    <fullName>LabelNum__c</fullName>
    <description>The nth element of this record type in this project building</description>
    <inlineHelpText>The nth element of this record type in this project building</inlineHelpText>
    <label>Label Num</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>