force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystemDetail__c/fields/LEDAverageReportedLifespan__c.field-meta.xml
<CustomField>
    <fullName>LEDAverageReportedLifespan__c</fullName>
    <description>LED Average Reported Lifespan</description>
    <inlineHelpText>Please indicate the average manufacturer&apos;s reported lifespan for installed LEDs.</inlineHelpText>
    <label>Average Reported Lifespan</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>