force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystemDetail__c/fields/LEDAverageReportedLifespanUnit__c.field-meta.xml
<CustomField>
    <fullName>LEDAverageReportedLifespanUnit__c</fullName>
    <description>LED Average Reported Lifespan</description>
    <inlineHelpText>Please choose the unit of the average reported lifespan.</inlineHelpText>
    <label>Average Reported Lifespan Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Years</fullName>
            </value>
            <value>
                <fullName>Hours</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>