force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystemDetail__c/fields/LEDIsLightingSource__c.field-meta.xml
<CustomField>
    <fullName>LEDIsLightingSource__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if LEDs</description>
    <inlineHelpText>Please indicate if LEDs are included in project building scope. Light-emitting diodes (LEDs) are small, compact devices that use semiconductor material and electric current to produce light.</inlineHelpText>
    <label>LED Lamps</label>
    <type>Checkbox</type>
</CustomField>