force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystemDetail__c/fields/LEDMfgLocOther__c.field-meta.xml
<CustomField>
    <fullName>LEDMfgLocOther__c</fullName>
    <inlineHelpText>Please provide LED Manufacturer location.</inlineHelpText>
    <label>Location if Outside the US</label>
    <length>255</length>
    <type>Text</type>
</CustomField>