force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystemDetail__c/fields/LEDMfgName__c.field-meta.xml
<CustomField>
    <fullName>LEDMfgName__c</fullName>
    <inlineHelpText>Please provide LED Manufacturer name.</inlineHelpText>
    <label>LED Manufacturer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>