force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystemDetail__c/fields/MagneticBearingCompressor__c.field-meta.xml
<CustomField>
    <fullName>MagneticBearingCompressor__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Magnetic Bearing Compressor</description>
    <inlineHelpText>Select if magnetic bearing compressor is included in project building scope.</inlineHelpText>
    <label>Magnetic Bearing Compressor</label>
    <type>Checkbox</type>
</CustomField>