force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystemDetail__c/fields/MfgLocOther__c.field-meta.xml
<CustomField>
    <fullName>MfgLocOther__c</fullName>
    <inlineHelpText>Enter manufacturer location</inlineHelpText>
    <label>Location if Outside the US</label>
    <length>255</length>
    <type>Text</type>
</CustomField>