force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystemDetail__c/fields/MfgName__c.field-meta.xml
<CustomField>
    <fullName>MfgName__c</fullName>
    <inlineHelpText>Enter manufacturer name</inlineHelpText>
    <label>Manufacturer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>