force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystemDetail__c/fields/MotorSizeHpNewAirHandlers__c.field-meta.xml
<CustomField>
    <fullName>MotorSizeHpNewAirHandlers__c</fullName>
    <description>Motor Size and HP of New Air Handlers</description>
    <inlineHelpText>Enter the motor size in horsepower (HP) of the new air handlers which were included in this project building scope.</inlineHelpText>
    <label>Total New Air Handlers Motor Size (HP)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>