force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystemDetail__c/fields/Narr__c.field-meta.xml
<CustomField>
    <fullName>Narr__c</fullName>
    <description>Narrative about this scope item</description>
    <inlineHelpText>If you have any additional comments or explanations for reported information above, please provide here.</inlineHelpText>
    <label>Comments</label>
    <length>32767</length>
    <type>LongTextArea</type>
</CustomField>